--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML> 
-
 <html> 
     <head> 
         <title>SUMÉ</title>         
@@ -26,16 +25,16 @@
                 <nav class=""> 
                     <ul class=""> 
                         <li class=""> 
-                            <a href="#about">&nbsp; &nbsp;Sobre &nbsp;&nbsp;<br></a> 
+                            <a href="#about">Sobre<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#contact">&nbsp;&nbsp;Contato</a> 
+                            <a href="#work">&nbsp;Músicas<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">&nbsp; facebook</a> 
+                            <a href="#contact">Contato</a> 
                         </li>                         
                         <li class=""> 
-                            <a href="https://www.instagram.com/paysume/" target="https://www.instagram.com/paysume/">instagram</a> 
+                            <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">facebook</a> 
                         </li>                         
                         <!--<li><a href="#elements">Elements</a></li>-->                         
                     </ul>                     
@@ -51,31 +50,43 @@
                     <p></p> 
                 </article>   -->                 
                 <!-- Work -->                 
-                <!--                 <article id="work" class=""> 
-                    <tbody class="pg-empty-placeholder"></tbody>                     
-                    <h2 class="major">sabina&nbsp;</h2> 
-                    <span class="image main"><a href="https://soundcloud.com/paysume/sabina-original-mix" target="_blank"> 
-                            <img src="images/pic02.jpg" alt="" /> 
-                        </a></span> 
-                    <p>Label: Phantom Unit<br>Data de lançamento: 13 de outubro, 2017<br>Mixagem: Fábio Duarte<br>Masterização: Fábio Duarte<br><br></p> 
-                    <h2 class="major">zumbi</h2> 
-                    <span class="image main"></span> 
-                </article>    -->                 
-                <!-- About -->                 
-                <article id="about" class=""> 
-                    <h2 class="major">sumé</h2>
+                <article id="work" class=""> 
+                    <h2 class="major">SABINA</h2>                      
+                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/PqFFQB64JS8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
+                    <p>SOBRE A TRACK BLALBALBLALBALBA<br></p>
+                    <h2 class="major">ZUMBI</h2>
+                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/PqFFQB64JS8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span>
+                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/PqFFQB64JS8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span>
                     <ul class="icons"> 
                         <li> 
-                            <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="https://www.facebook.com/paysume/"><span class="label">Facebook</span></a> 
+                            <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
                         </li>                         
                         <li> 
-                            <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="https://www.instagram.com/paysume/"><span class="label">Instagram</span></a> 
+                            <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
                         </li>                         
                         <li> 
-                            <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="https://soundcloud.com/paysume"><span class="label">Twitter</span></a> 
+                            <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug"><span class="label">GitHub</span></a> 
+                            <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                        </li>                         
+                    </ul>                     
+                </article>                 
+                <!-- About -->                 
+                <article id="about" class=""> 
+                    <h2 class="major">sumé</h2> 
+                    <ul class="icons"> 
+                        <li> 
+                            <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
+                        </li>                         
+                        <li> 
+                            <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
+                        </li>                         
+                        <li> 
+                            <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                        </li>                         
+                        <li class=""> 
+                            <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
                         </li>                         
                     </ul>                     
                     <span class="image main"><img src="images/pic01.jpg" alt="" /></span> 
@@ -86,11 +97,11 @@
                     <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbw3kgPyVrIDfv7US3BOa6k9tqovPuIvTo8-n-RqXwRqKqwtTE0/exec"> 
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
-                            <input type="text" name="name" id="name" /> 
+                            <input type="text" name="name" id="name" required/> 
                         </div>                         
                         <div class="field half"> 
                             <label for="email">Email</label>                             
-                            <input type="text" name="email" id="email" required placeholder="nome@email.com" /> 
+                            <input type="text" name="email" id="email" required/> 
                             <span id="email-invalid" style="display:none"> 
         O e-mail precisa ser válido</span> 
                         </div>                         
@@ -115,7 +126,6 @@
                 <!-- Elements -->                 
                 <article id="elements"> 
                     <h2 class="major">Elements</h2> 
-                                   
                 </article>                 
             </div>             
             <!-- Footer -->             
@@ -123,9 +133,8 @@
 </footer>             
         </div>         
         <!-- BG -->         
-        <div class="wrapper">
-            <div class="bg" id="bg"></div>
-
+        <div class="wrapper"> 
+            <div class="bg" id="bg"></div>             
         </div>         
         <!-- Scripts -->         
         <script src="assets/js/jquery.min.js"></script>         
