--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                 <!-- Work -->                 
                 <article id="work" class=""> 
                     <h2 class="major">SABINA</h2>                      
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/PqFFQB64JS8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
+                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
                     <p>SOBRE A TRACK BLALBALBLALBALBA<br></p>
                     <h2 class="major">ZUMBI</h2>
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/PqFFQB64JS8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span>
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/PqFFQB64JS8" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span>
+                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span>
+                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span>
                     <ul class="icons"> 
                         <li> 
                             <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
