--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                 <nav class=""> 
                     <ul class=""> 
                         <li class=""> 
-                            <a href="#about">Sobre<br></a> 
+                            <a href="#about">&nbsp;Sobre &nbsp;<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#work">&nbsp;Músicas<br></a> 
+                            <a href="#work">&nbsp;Músicas &nbsp;<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#contact">Contato</a> 
+                            <a href="#contact">&nbsp;Contato &nbsp;</a> 
                         </li>                         
                         <li class=""> 
                             <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">facebook</a> 
