--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
                 <nav class=""> 
                     <ul class=""> 
                         <li class=""> 
-                            <a href="#about">&nbsp;Sobre &nbsp;<br></a> 
+                            <a href="#sobre">Sobre<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#work">&nbsp;Músicas &nbsp;<br></a> 
+                            <a href="#musicas">&nbsp;músicas</a> 
+                        </li>                         
+                        <li class="">
+                            <a href="#contato">&nbsp;Contato</a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#contact">&nbsp;Contato &nbsp;</a> 
-                        </li>                         
-                        <li class=""> 
-                            <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">facebook</a> 
+                            <a href="https://www.facebook.com/paysume" target="_blank">fanpage</a> 
                         </li>                         
                         <!--<li><a href="#elements">Elements</a></li>-->                         
                     </ul>                     
@@ -43,36 +43,42 @@
             <!-- Main -->             
             <div id="main" class=""> 
                 <!-- Intro -->                 
-                <!--                 <article id="intro" class=""> 
-                    <h2 class="major">SOBRE:</h2> 
-                    <span class="image main"></span> 
-                    <p>Sumé é um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
-                    <p></p> 
-                </article>   -->                 
+                <!--                 <article id="galeria" class=""> 
+                    <h2 class="major">SOBRE:</h2>
+                    <div class="">
+                        <script type="text/javascript" src="instafeed/instafeed.min.js">
+               var feed = require("instafeed");
+    var feed = new Instafeed({
+        get: 'tagged',
+        tagName: 'awesome',
+        clientId: '1440955638'
+    });
+    feed.run();
+</script>
+                    </div>                     
+                </article>  -->                 
                 <!-- Work -->                 
-                <article id="work" class=""> 
-                    <h2 class="major">SABINA</h2>                      
+                <article id="musicas" class=""> 
+                    <h2 class="major">SABINA</h2> 
+                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe><ul class="icons"> 
+                            <li> 
+                                <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
+                            </li>                             
+                            <li> 
+                                <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
+                            </li>                             
+                            <li> 
+                                <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                            </li>                             
+                            <li class=""> 
+                                <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                            </li>                             
+                        </ul></span> 
+                    <h2 class="major">ZUMBI</h2> 
                     <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
-                    <p>SOBRE A TRACK BLALBALBLALBALBA<br></p>
-                    <h2 class="major">ZUMBI</h2>
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span>
-                    <ul class="icons"> 
-                        <li> 
-                            <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
-                        </li>                         
-                        <li> 
-                            <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
-                        </li>                         
-                        <li> 
-                            <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
-                        </li>                         
-                        <li class=""> 
-                            <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
-                        </li>                         
-                    </ul>                     
                 </article>                 
                 <!-- About -->                 
-                <article id="about" class=""> 
+                <article id="sobre" class=""> 
                     <h2 class="major">sumé</h2> 
                     <ul class="icons"> 
                         <li> 
@@ -92,15 +98,15 @@
                     <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
                 </article>                 
                 <!-- Contact -->                 
-                <article id="contact" class=""> 
+                <article id="contato" class=""> 
                     <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbw3kgPyVrIDfv7US3BOa6k9tqovPuIvTo8-n-RqXwRqKqwtTE0/exec"> 
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
-                            <input type="text" name="name" id="name" required/> 
+                            <input type="text" name="name" id="name" required /> 
                         </div>                         
                         <div class="field half"> 
                             <label for="email">Email</label>                             
-                            <input type="text" name="email" id="email" required/> 
+                            <input type="email" name="email" id="email" required /> 
                             <span id="email-invalid" style="display:none"> 
         O e-mail precisa ser válido</span> 
                         </div>                         
