--- a/index.html
+++ b/index.html
@@ -60,20 +60,7 @@
                 <!-- Work -->                 
                 <article id="musicas" class=""> 
                     <h2 class="major">SABINA</h2> 
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe><ul class="icons"> 
-                            <li> 
-                                <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
-                            </li>                             
-                            <li> 
-                                <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
-                            </li>                             
-                            <li> 
-                                <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
-                            </li>                             
-                            <li class=""> 
-                                <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
-                            </li>                             
-                        </ul></span> 
+                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
                     <h2 class="major">ZUMBI</h2> 
                     <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
                 </article>                 
