--- a/index.html
+++ b/index.html
@@ -94,7 +94,6 @@
                         <div class="field half"> 
                             <label for="email">Email</label>                             
                             <input type="email" name="email" id="email" required /> 
-
                         </div>                         
                         <div class="field"> 
                             <label for="message">mensagem</label>                             
@@ -109,9 +108,23 @@
                             </li>                             
                         </ul>                         
                     </form>                     
-                    <div style="display:none;" id="thankyou_message"> 
+                    <div style="display:none;" id="thankyou_message" class=""> 
                         <h3>Obrigado por entrar em contato!</h3> 
-                        <h3>Retornarei sua mensagem em breve...</h3> 
+                        <h3>Retornarei sua mensagem em breve...<br><br></h3>
+                        <ul class="icons"> 
+                            <li> 
+                                <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
+                            </li>                             
+                            <li> 
+                                <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
+                            </li>                             
+                            <li> 
+                                <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                            </li>                             
+                            <li class=""> 
+                                <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                            </li>                             
+                        </ul>                         
                     </div>                     
                 </article>                 
                 <!-- Elements -->                 
