sem espaço menu

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                             <a href="#sobre">Sobre<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#musicas">&nbsp;músicas</a> 
+                            <a href="#musicas">músicas</a> 
                         </li>                         
                         <li class="">
                             <a href="https://www.facebook.com/paysume" target="_blank">fanpage</a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#contato">&nbsp;Contato</a> 
+                            <a href="#contato">Contato</a> 
                         </li>                         
                         <!--<li><a href="#elements">Elements</a></li>-->                         
                     </ul>                     
@@ -58,7 +58,7 @@
                     </div>                     
                 </article>  -->                 
                 <!-- Work -->                 
-                <article id="musicas" class=""> 
+                <article id="musicas" class="">
                     <h2 class="major">SABINA</h2> 
                     <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
                     <h2 class="major">ZUMBI</h2> 
