--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
                 </article>  -->                 
                 <!-- Work -->                 
                 <article id="musicas" class="">
-                    <h2 class="major">SABINA</h2> 
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
-                    <h2 class="major">ZUMBI</h2> 
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
+                    <a href="https://soundcloud.com/paysume/sabina-original-mix" target="_blank"><h2 class="major">SABINA</h2></a> 
+                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span>                                           
                 </article>                 
                 <!-- About -->                 
                 <article id="sobre" class=""> 
