--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <!-- Work -->                 
                 <article id="musicas" class="">
                     <h2 class="major">Sabina</h2>
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
+                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/7zRN-dchUSE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
                 </article>                 
                 <!-- About -->                 
                 <article id="sobre" class=""> 
