--- a/index.html
+++ b/index.html
@@ -59,8 +59,18 @@
                 </article>  -->                 
                 <!-- Work -->                 
                 <article id="musicas" class="">
-                    <h2 class="major">Sabina</h2>
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/7zRN-dchUSE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
+                    <table class="">
+                        <h2 class="major">Sabina</h2>
+                        <iframe width='560' height='315' src="https://www.youtube.com/embed/7zRN-dchUSE?&theme=dark&color=white&autohide=0&modestbranding=1&fs=0&showinfo=0&rel=0&iv_load_policy=3" rameborder="0"></iframe>
+                        <span><ul class="icons">
+                                <li> 
+                                    <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                                </li>                                 
+                                <li> 
+                                    <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                                </li>                                 
+                            </ul></span>
+                    </table>                     
                 </article>                 
                 <!-- About -->                 
                 <article id="sobre" class=""> 
