--- a/index.html
+++ b/index.html
@@ -61,34 +61,34 @@
                 <article id="musicas" class="">
                     <table class="">
                         <h2 class="major">Sabina</h2>
-                        <iframe width='560' height='315' src="https://www.youtube.com/embed/7zRN-dchUSE?&theme=dark&color=white&autohide=0&modestbranding=1&fs=0&showinfo=0&rel=0&iv_load_policy=3" rameborder="0"></iframe>
-                        <span><ul class="icons">
-                                <li> 
-                                    <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
-                                </li>                                 
-                                <li> 
-                                    <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
-                                </li>                                 
-                            </ul></span>
+                        <span class="image main"><iframe width='560' height='315' src="https://www.youtube.com/embed/7zRN-dchUSE?&theme=dark&color=white&autohide=0&modestbranding=1&fs=0&showinfo=0&rel=0&iv_load_policy=3" rameborder=""></iframe><span class=""><ul class="icons">
+                                    <li> 
+                                        <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                                    </li>                                     
+                                    <li class=""> 
+                                        <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                                    </li>                                     
+                                </ul></span></span>
                     </table>                     
                 </article>                 
                 <!-- About -->                 
                 <article id="sobre" class=""> 
-                    <h2 class="major">sumé</h2> 
-                    <span class="image main"><ul class="icons"> 
-                            <li> 
-                                <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
-                            </li>                             
-                            <li> 
-                                <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
-                            </li>                             
-                            <li> 
-                                <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
-                            </li>                             
-                            <li class=""> 
-                                <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
-                            </li>                             
-                        </ul><img src="images/pic01.jpg" alt="" /></span> 
+                    <h2 class="major">sumé</h2>
+                    <ul class="icons"> 
+                        <li> 
+                            <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
+                        </li>                         
+                        <li> 
+                            <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
+                        </li>                         
+                        <li> 
+                            <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
+                        </li>                         
+                        <li class=""> 
+                            <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
+                        </li>                         
+                    </ul>                     
+                    <span class="image main"><img src="images/pic01.jpg" alt="" /></span> 
                     <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
                 </article>                 
                 <!-- Contact -->                 
