--- a/index.html
+++ b/index.html
@@ -25,29 +25,16 @@
                 <nav class=""> 
                     <ul class=""> 
                         <li class=""> 
-<<<<<<< HEAD
                             <a href="#about">Sobre<br></a> 
                         </li>                         
                         <li class=""> 
                             <a href="#work">&nbsp;Músicas<br></a> 
                         </li>                         
                         <li class=""> 
-                            <a href="#contact">Contato</a> 
-                        </li>                         
-                        <li class=""> 
-                            <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">facebook</a> 
-=======
-                            <a href="#sobre">Sobre<br></a> 
-                        </li>                         
-                        <li class=""> 
-                            <a href="#musicas">&nbsp;músicas</a> 
+                            <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">fanpage</a> 
                         </li>                         
                         <li class="">
-                            <a href="https://www.facebook.com/paysume" target="_blank">fanpage</a> 
-                        </li>                         
-                        <li class=""> 
-                            <a href="#contato">Contato</a> 
->>>>>>> 1868cea5dfeac1c97b35f2f6252d1571c9fb94c8
+                            <a href="#contact">Contato</a>                              
                         </li>                         
                         <!--<li><a href="#elements">Elements</a></li>-->                         
                     </ul>                     
@@ -56,58 +43,26 @@
             <!-- Main -->             
             <div id="main" class=""> 
                 <!-- Intro -->                 
-                <!--                 <article id="galeria" class=""> 
-                    <h2 class="major">SOBRE:</h2>
-                    <div class="">
-                        <script type="text/javascript" src="instafeed/instafeed.min.js">
-               var feed = require("instafeed");
-    var feed = new Instafeed({
-        get: 'tagged',
-        tagName: 'awesome',
-        clientId: '1440955638'
-    });
-    feed.run();
-</script>
-                    </div>                     
-                </article>  -->                 
+                <!--                 <article id="intro" class=""> 
+                    <h2 class="major">SOBRE:</h2> 
+                    <span class="image main"></span> 
+                    <p>Sumé é um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
+                    <p></p> 
+                </article>   -->                 
                 <!-- Work -->                 
-<<<<<<< HEAD
-                <article id="work" class=""> 
-                    <h2 class="major">SABINA</h2>                      
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span> 
-                    <p>SOBRE A TRACK BLALBALBLALBALBA<br></p>
-                    <h2 class="major">ZUMBI</h2>
-                    <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/5_qo4mkNSUw" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe></span>
-                    <ul class="icons"> 
-                        <li> 
-                            <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
-                        </li>                         
-                        <li> 
-                            <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
-                        </li>                         
-                        <li> 
-                            <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
-                        </li>                         
-                        <li class=""> 
-                            <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
-                        </li>                         
-                    </ul>                     
+                <article id="work" class="">
+                    <table class="">
+                        <h2 class="major">SABINA</h2>
+                        <span class="image main"><iframe src="https://www.youtube.com/embed/7zRN-dchUSE?modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&iv_load_policy=3&theme=light&fs=0" width="560" height="315" frameborder="0"></iframe></span>
+                    </table>
+                    <table class="">
+                        <h2 class="major">Zumbi</h2>
+                        <span class="image main"><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/381733127&amp;color=%230c0c0c&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe></span>
+                    </table>                     
                 </article>                 
                 <!-- About -->                 
                 <article id="about" class=""> 
                     <h2 class="major">sumé</h2> 
-=======
-                <article id="musicas" class="">
-                    <table class="">
-                        <h2 class=""><a href="https://soundcloud.com/paysume/sabina-original-mix" class="icon fa-soundcloud" target="_blank" data-toggle="popover"><span class="label">Soundcloud</span><span class="label">Soundcloud</span></a>&nbsp;SABINA<br></h2>
-                        <iframe width='560' height='315' src="https://www.youtube.com/embed/7zRN-dchUSE?&theme=dark&color=white&autohide=0&modestbranding=1&fs=0&showinfo=0&rel=0&iv_load_policy=3" rameborder="" class=""></iframe>
-                        <h3>_________________________________________</h3>
-                    </table>                     
-                </article>                 
-                <!-- About -->                 
-                <article id="sobre" class=""> 
-                    <h2 class="major">sumé</h2>
->>>>>>> 1868cea5dfeac1c97b35f2f6252d1571c9fb94c8
                     <ul class="icons"> 
                         <li> 
                             <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
@@ -126,25 +81,17 @@
                     <p>Um nome em ascensão no trance progressivo. Com um live totalmente autoral, visa o coletivo, transformando a música e o público numa força única. Focado na produção do seu primeiro álbum, busca passar para o público toda emoção envolvida no processo de criação. Proporcionando uma experiência diferente para o público, navegando entre a introspecção e a euforia, surpreende os novos ouvintes e arrasta para a pista aqueles que já ouviram. Formado em discotecagem na AIMEC (Academia Internacional de Música Eletrônica), busca a perfeição ao passar sua mensagem para o público.</p> 
                 </article>                 
                 <!-- Contact -->                 
-                <article id="contato" class=""> 
+                <article id="contact" class=""> 
                     <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net" action="https://script.google.com/macros/s/AKfycbw3kgPyVrIDfv7US3BOa6k9tqovPuIvTo8-n-RqXwRqKqwtTE0/exec"> 
                         <div class="field half first"> 
                             <label for="name">nome</label>                             
-<<<<<<< HEAD
-                            <input type="text" name="name" id="name" required/> 
-                        </div>                         
-                        <div class="field half"> 
-                            <label for="email">Email</label>                             
-                            <input type="text" name="email" id="email" required/> 
-                            <span id="email-invalid" style="display:none"> 
-        O e-mail precisa ser válido</span> 
-=======
                             <input type="text" name="name" id="name" required /> 
                         </div>                         
                         <div class="field half"> 
                             <label for="email">Email</label>                             
-                            <input type="email" name="email" id="email" required /> 
->>>>>>> 1868cea5dfeac1c97b35f2f6252d1571c9fb94c8
+                            <input type="text" name="email" id="email" required /> 
+                            <span id="email-invalid" style="display:none"> 
+        O e-mail precisa ser válido</span> 
                         </div>                         
                         <div class="field"> 
                             <label for="message">mensagem</label>                             
@@ -159,27 +106,9 @@
                             </li>                             
                         </ul>                         
                     </form>                     
-                    <div style="display:none;" id="thankyou_message" class=""> 
+                    <div style="display:none;" id="thankyou_message"> 
                         <h3>Obrigado por entrar em contato!</h3> 
-<<<<<<< HEAD
                         <h3>Retornarei sua mensagem em breve...</h3> 
-=======
-                        <h3>Retornarei sua mensagem em breve...<br><br></h3>
-                        <ul class="icons"> 
-                            <li> 
-                                <a href="https://www.facebook.com/paysume/" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a> 
-                            </li>                             
-                            <li> 
-                                <a href="https://www.instagram.com/paysume/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a> 
-                            </li>                             
-                            <li> 
-                                <a href="https://soundcloud.com/paysume" class="icon fa-soundcloud" target="_blank"><span class="label">Soundcloud</span></a> 
-                            </li>                             
-                            <li class=""> 
-                                <a href="https://www.youtube.com/channel/UCcYeWMkaiGXETXtY4Bbh_Ug" class="icon fa-youtube" target="_blank"><span class="label">Youtube</span></a> 
-                            </li>                             
-                        </ul>                         
->>>>>>> 1868cea5dfeac1c97b35f2f6252d1571c9fb94c8
                     </div>                     
                 </article>                 
                 <!-- Elements -->                 
