--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a href="https://www.facebook.com/paysume/" target="https://www.facebook.com/paysume/">fanpage</a> 
                         </li>                         
                         <li class="">
-                            <a href="#contact">Contato</a>                              
+                            <a href="#contact">Contato</a> 
                         </li>                         
                         <!--<li><a href="#elements">Elements</a></li>-->                         
                     </ul>                     
@@ -53,11 +53,11 @@
                 <article id="work" class="">
                     <table class="">
                         <h2 class="major">SABINA</h2>
-                        <span class="image main"><iframe src="https://www.youtube.com/embed/7zRN-dchUSE?modestbranding=1&showinfo=0&rel=0&cc_load_policy=1&iv_load_policy=3&theme=light&fs=0" width="560" height="315" frameborder="0"></iframe></span>
+                        <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/EjyWtdOdp3c?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></span>
                     </table>
                     <table class="">
                         <h2 class="major">Zumbi</h2>
-                        <span class="image main"><iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/381733127&amp;color=%230c0c0c&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe></span>
+                        <span class="image main"><iframe width="560" height="315" src="https://www.youtube.com/embed/09T35XDb5F0?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></span>
                     </table>                     
                 </article>                 
                 <!-- About -->                 
@@ -99,7 +99,7 @@
                         </div>                         
                         <ul class="actions"> 
                             <li> 
-                                <input type="submit" class="special" value="Enviar" ""> 
+                                <input type="submit" class="special" value="Enviar"> 
                             </li>                             
                             <li> 
                                 <input type="reset" value="Apagar tudo" /> 
